--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,7 @@ p
     background-color: blanchedalmond;
     padding: 10px 30px;
 }
+#pan-tadeusz {
+    background-color: darkgrey;
+    color: yellow;
+}
